--- a/src/app/components/Header.module.scss
+++ b/src/app/components/Header.module.scss
@@ -1,22 +1,20 @@
-.header{
+.header {
     display: flex;
-    width:100%;
-    height:72px;
+    width: 100%;
+    height: 72px;
     padding: 16px 0 16px 0;
     border-bottom: 1px solid #E0E0E0;
-    > div {
-        flex: 1;
-      }
 
-    .logo{
+    .logo {
         width: 187px;
-        height: 40px;        
+        height: 40px;
     }
 
-    .icon{
+    .icon {
+        position: absolute;
         width: 24px;
         height: 24px;
 
+
     }
 }
-
