--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,25 +1,46 @@
-.main {
-
+#main {
   margin: 0 auto;
   width: 100%;
-
 }
 
-.sides {
-  position: absolute;
-  width: 50%;
-  height: 100%;
-  padding: 35px 35px 0 35px;
+#mainSides {
+  display: flex;
+  flex-direction: row;
 
-}
+  @media (max-width: 800px) {
+    background-color: red;
+    flex-direction: column;
 
-.left {
-  background-color: white;
-  left: 0;
-}
+  }
 
-.right {
-  right: 0;
-  background-color: #F5F5F5;
-  ;
+  .sides {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    padding: 35px 35px 0 35px;
+
+  }
+
+  #left {
+    background-color: white;
+    left: 0;
+
+    @media (max-width: 800px) {
+      position: unset;
+      width: 100%;
+      order: 2;
+    }
+  }
+
+  #right {
+    right: 0;
+    background-color: #F5F5F5;
+
+    @media (max-width: 800px) {
+      position: unset;
+      width: 100%;
+      order: 1;
+    }
+  }
+
 }
