add validation with zod

--- a/src/app/components/Form.module.scss
+++ b/src/app/components/Form.module.scss
@@ -8,11 +8,27 @@
 
 
 
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     max-width: 405px;
     margin: 0 auto;
     float: unset;
+
+
+    #cityStateRow {
+      flex-wrap: wrap;
+
+    }
+
+    #cityField {
+      flex: 1 1 100%;
+    }
+
+
+
   }
+
+
+
 }
 
 .formGroup {
@@ -145,4 +161,11 @@
       margin-right: 8px;
     }
   }
+}
+
+.error {
+  color: #ec6b6b;
+  margin: 6px;
+  font-size: 12px;
+  font-weight: 700;
 }
