--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,17 +1,21 @@
 #main {
   margin: 0 auto;
   width: 100%;
+  min-width: 390px;
 }
 
 #mainSides {
   display: flex;
   flex-direction: row;
 
-  @media (max-width: 800px) {
+  @media (max-width: 1000px) {
     background-color: red;
     flex-direction: column;
 
   }
+
+
+
 
   .sides {
     position: absolute;
@@ -25,7 +29,7 @@
     background-color: white;
     left: 0;
 
-    @media (max-width: 800px) {
+    @media (max-width: 1000px) {
       position: unset;
       width: 100%;
       order: 2;
@@ -36,7 +40,7 @@
     right: 0;
     background-color: #F5F5F5;
 
-    @media (max-width: 800px) {
+    @media (max-width: 1000px) {
       position: unset;
       width: 100%;
       order: 1;
