--- a/src/app/components/Form.module.scss
+++ b/src/app/components/Form.module.scss
@@ -25,7 +25,7 @@
   gap: 16px;
 
   @media (max-width: 1000px) {
-    background-color: #F5F5F5;
+    // background-color: #F5F5F5;
   }
 }
 
@@ -106,19 +106,21 @@
 .checkbox {
   appearance: none;
   -webkit-appearance: none;
-  width: 36px;
+  width: 20px;
   height: 20px;
-  border: 2px solid #0070f3;
+  border: 2px solid #3362AB;
   border-radius: 50%;
   position: relative;
-  margin-right: 10px;
+  margin: 2px 10px 0 0;
   transition: background-color 0.3s, border-color 0.3s;
+  flex-shrink: 0;
   cursor: pointer;
 }
 
+
 .checkbox:checked {
-  background-color: #0070f3;
-  border-color: #0070f3;
+  background-color: #3362AB;
+  border-color: #3362AB;
 }
 
 .checkbox:checked::after {
@@ -131,6 +133,21 @@
   border: solid white;
   border-width: 0 3px 3px 0;
   transform: rotate(45deg);
+}
+
+.custom-checkbox input:checked+span::after {
+  content: '';
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 16px;
+  /* Width reduced to create a 1px space */
+  height: 16px;
+  /* Height reduced to create a 1px space */
+  background-color: blue;
+  /* Fill color */
+  border-radius: 2px;
+  /* Match outer border radius if rounded */
 }
 
 .checkbox:hover {
@@ -184,7 +201,6 @@
       flex: 1;
       width: 36px;
       height: 24px;
-      background-color: aqua;
     }
   }
 
@@ -230,7 +246,7 @@
 
 .error {
   color: #ec6b6b;
-  margin: 6px;
+  margin: 6px 6px 6px 0;
   font-size: 12px;
   font-weight: 700;
 }
